[package]
name = "chopper"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
freertos-cargo-build = "*"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
rtt-target = { version = "0.4.0" }
usb-device = "0.3.2"
usbd-serial = "0.2.0"
arrform = "0.1.1"
freertos-rust = "*"
num-traits = { version = "0.2", default-features = false }

[dependencies.stm32f4xx-hal]
version = "0.19"
# git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["rt", "stm32f405", "usb_fs"] # replace the model of your microcontroller here
